handson-practice/services/ingress/appgw_dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /     # ✅ AGIC health probe
spec:
  ingressClassName: azure-application-gateway            # ✅ Correct ingress class
  rules:
  - host: "app.monitorminds.net"
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port: 
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port: 
              number: 80
