handson-practice/services/ingress/ingress_dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  #annotations:
    #kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx
  rules:
    - host: "app.monitorminds.net"
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80  
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-app-service
                port: 
                  number: 80
